2010-06-22  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlayerVBN.cs: Player code added

	* DragonOgg.csproj: Changes to reflect additional files

	* Queues.cs: Classes extending the functionality of
	  System.Collections.Queue

2010-05-26  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggFile.cs: Made constructor exceptions more sane

	* OggPlayerFBN.cs: Moved a lot of common functions & variables
	  to the new OggPlayer abstraction
	Rebuilt event handling to work with the new abstraction

	* OggPlayer.cs: Moved more common functions from the old
	  OggPlayer (now OggPlayerFBN) to the new abstract
	Added an exception to handle source errors
	Added protected InitSource & DestroySource calls to simplify
	  source control

	* MiscStuff.cs: Added additional values for
	  OggPlayerMessageType enumeration

2010-05-19  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlayerFBN.cs: Old OggPlayer class moved here
	Several changes to make it work with the new OggPlayer
	  abstraction (not complete yet)

	* OggPlayer.cs: Moved old OggPlayer class to OggPlayerFBN.
	  OggPlayer is now an abstraction for players of different
	  types

	* OggPlayerVBN.cs: New OggPlayer type - Variable Buffer Number
	  player

	* DragonOgg.csproj: Changes to reflect new version number &
	  new files

	* MiscStuff.cs: Added additional enumerations & supporting
	  GetEnumString functions to handler OggPlayer abstraction

2010-05-14  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlaylist.cs: Added Add & Remove functions

	* OggPlayer.cs: Bugfix to sort regression causing
	  non-detection of EOFs

2010-05-11  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlayer.cs: Made player thread more resilient to adverse
	  network/processor conditions - intermittent connections
	  should no longer leave the player hanging whilst indicating
	  it is still playing.

2010-05-09  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggFile.cs: Fixed missing Save call in RemoveAllTags
